1001~1043
19j5029@lin3375:~$ pwd
/home/stu/2019/j5/19j5029
19j5029@lin3375:~$ ls .
Maildir       テンプレート  ドキュメント  ピクチャ	公開
ダウンロード  デスクトップ  ビデオ	  ミュージック
19j5029@lin3375:~$ cd prog1
bash: cd: prog1: そのようなファイルやディレクトリはありません
19j5029@lin3375:~$ mkdir prog1
19j5029@lin3375:~$ cd prog1
19j5029@lin3375:~/prog1$ mkdir prog1/10
mkdir: ディレクトリ `prog1/10' を作成できません: そのようなファイルやディレクトリはありません
19j5029@lin3375:~/prog1$ cd prog1
bash: cd: prog1: そのようなファイルやディレクトリはありません
19j5029@lin3375:~/prog1$ mkdir prog1
19j5029@lin3375:~/prog1$ cd prog1
19j5029@lin3375:~/prog1/prog1$ mkdir prog1
19j5029@lin3375:~/prog1/prog1$ mkdir prog1/10
19j5029@lin3375:~/prog1/prog1$ cd prog1/10
19j5029@lin3375:~/prog1/prog1/prog1/10$ gedit &
[1] 2536
19j5029@lin3375:~/prog1/prog1/prog1/10$ python3 1006.py
1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 19j5029@lin3375:~/prog1/prog1/prog1/10$  python3 1006.py
1 
2 
3 
4 
5 
6 
7 
8 
9 
10 
11 
12 
13 
14 
15 
16 
17 
18 
19 
20 
21 
22 
23 
24 
25 
26 
27 
28 
29 
30 
31 
32 
33 
34 
35 
36 
37 
38 
39 
40 
41 
42 
43 
44 
45 
46 
47 
48 
49 
50 
51 
52 
53 
54 
55 
56 
57 
58 
59 
60 
61 
62 
63 
64 
65 
66 
67 
68 
69 
70 
71 
72 
73 
74 
75 
76 
77 
78 
79 
80 
81 
82 
83 
84 
85 
86 
87 
88 
89 
90 
91 
92 
93 
94 
95 
96 
97 
98 
99 
19j5029@lin3375:~/prog1/prog1/prog1/10$ cat 1006.py
for x in range(1,100):
    print(x,end=" ")
    print()
19j5029@lin3375:~/prog1/prog1/prog1/10$ echo "for x in range(1,100):"
for x in range(1,100):
19j5029@lin3375:~/prog1/prog1/prog1/10$ echo "for x in range(1,100):">1012.py
19j5029@lin3375:~/prog1/prog1/prog1/10$ cd 1012.py
bash: cd: 1012.py: ディレクトリではありません
19j5029@lin3375:~/prog1/prog1/prog1/10$ ls 1012.py
1012.py
19j5029@lin3375:~/prog1/prog1/prog1/10$ echo " print(x, end=\" \")"
 print(x, end=" ")
19j5029@lin3375:~/prog1/prog1/prog1/10$ echo " print(x, end=\" \")">>1012.py
19j5029@lin3375:~/prog1/prog1/prog1/10$ ls 1012.py
1012.py
19j5029@lin3375:~/prog1/prog1/prog1/10$ python3 1012.py
1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 19j5029@lin3375:~/prog1/prog1/prog1/10$ cp 1012.py hoge.py
19j5029@lin3375:~/prog1/prog1/prog1/10$ gedit hoge.py &
[2] 2646
19j5029@lin3375:~/prog1/prog1/prog1/10$ ls.-n hoge.py
ls.-n: コマンドが見つかりません
[2]+  終了                  gedit hoge.py
[2]+  終了                  gedit hoge.py
19j5029@lin3375:~/prog1/prog1/prog1/10$ ls -n hoge.py
-rw-r--r-- 1 31015 1031 52  6月 14 13:19 hoge.py
19j5029@lin3375:~/prog1/prog1/prog1/10$ cp hoge.py ^C
19j5029@lin3375:~/prog1/prog1/prog1/10$ cp hoge.py hoge-bkup.py
19j5029@lin3375:~/prog1/prog1/prog1/10$ ls hoge.py
hoge.py
19j5029@lin3375:~/prog1/prog1/prog1/10$ python3 hoge.py
  File "hoge.py", line 2
    print("folder"x,end=" ")
                  ^
SyntaxError: invalid syntax
19j5029@lin3375:~/prog1/prog1/prog1/10$ python3 hoge.py
101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 19j5029@lin3375:~/prog1/prog1/prog1/10$ python3  hoge.py
101 
102 
103 
104 
105 
106 
107 
108 
109 
110 
111 
112 
113 
114 
115 
116 
117 
118 
119 
120 
121 
122 
123 
124 
125 
126 
127 
128 
129 
130 
131 
132 
133 
134 
135 
136 
137 
138 
139 
140 
141 
142 
143 
144 
145 
146 
147 
148 
149 
150 
151 
152 
153 
154 
155 
156 
157 
158 
159 
160 
161 
162 
163 
164 
165 
166 
167 
168 
169 
170 
171 
172 
173 
174 
175 
176 
177 
178 
179 
180 
181 
182 
183 
184 
185 
186 
187 
188 
189 
190 
191 
192 
193 
194 
195 
196 
197 
198 
199 
200 
19j5029@lin3375:~/prog1/prog1/prog1/10$ rm hoge-bkup.py
19j5029@lin3375:~/prog1/prog1/prog1/10$ cp hoge.py hoge-bkup.py
19j5029@lin3375:~/prog1/prog1/prog1/10$ pwd
/home/stu/2019/j5/19j5029/prog1/prog1/prog1/10
19j5029@lin3375:~/prog1/prog1/prog1/10$ gedit &
[2] 2698
19j5029@lin3375:~/prog1/prog1/prog1/10$ bash mkdirs.sh
[2]+  終了                  gedit
19j5029@lin3375:~/prog1/prog1/prog1/10$ pwd
/home/stu/2019/j5/19j5029/prog1/prog1/prog1/10
19j5029@lin3375:~/prog1/prog1/prog1/10$ gedit &
[2] 2719
19j5029@lin3375:~/prog1/prog1/prog1/10$ python3 rmdirs.sh
  File "rmdirs.sh", line 1
    rmdir forder 101
               ^
SyntaxError: invalid syntax
[2]+  終了                  gedit
19j5029@lin3375:~/prog1/prog1/prog1/10$ python3 rmdirs.sh
  File "rmdirs.sh", line 1
    rmdir forder 101
               ^
SyntaxError: invalid syntax
19j5029@lin3375:~/prog1/prog1/prog1/10$ python3 rmdirs.sh
  File "rmdirs.sh", line 1
    rmdir folder101
                  ^
SyntaxError: invalid syntax
19j5029@lin3375:~/prog1/prog1/prog1/10$ pwd
/home/stu/2019/j5/19j5029/prog1/prog1/prog1/10
19j5029@lin3375:~/prog1/prog1/prog1/10$ gedit &
[2] 2754
19j5029@lin3375:~/prog1/prog1/prog1/10$ python3 mkdirs.sh
  File "mkdirs.sh", line 1
    mkdir folder101
                  ^
SyntaxError: invalid syntax
[2]+  終了                  gedit
19j5029@lin3375:~/prog1/prog1/prog1/10$ pwd
/home/stu/2019/j5/19j5029/prog1/prog1/prog1/10
19j5029@lin3375:~/prog1/prog1/prog1/10$ gedit &
[2] 2773
19j5029@lin3375:~/prog1/prog1/prog1/10$ python3 rmdirs.sh
  File "rmdirs.sh", line 1
    rmdir folder101
                  ^
SyntaxError: invalid syntax
[2]+  終了                  gedit
19j5029@lin3375:~/prog1/prog1/prog1/10$ gedit &
[2] 2810
19j5029@lin3375:~/prog1/prog1/prog1/10$ python3 mkdirs3.sh
  File "mkdirs3.sh", line 1
    mkdir folder101
                  ^
SyntaxError: invalid syntax
[2]+  終了                  gedit
19j5029@lin3375:~/prog1/prog1/prog1/10$ pwd
/home/stu/2019/j5/19j5029/prog1/prog1/prog1/10
19j5029@lin3375:~/prog1/prog1/prog1/10$ gedit &
[2] 2851
19j5029@lin3375:~/prog1/prog1/prog1/10$ python3 rmdirs.sh
  File "rmdirs.sh", line 1
    rmdir folder101
                  ^
SyntaxError: invalid syntax
[2]+  終了                  gedit
19j5029@lin3375:~/prog1/prog1/prog1/10$ pwd
/home/stu/2019/j5/19j5029/prog1/prog1/prog1/10
19j5029@lin3375:~/prog1/prog1/prog1/10$ 
